# kvdb-cpp

./: .clangd  CMakeLists.txt  LICENSE  README.md
.github/workflows/: linux.yaml  windows.yaml
cmake/: kvdb-cpp-config.cmake.in  kvdbcpp-config-version.cmake.in  kvdbcpp-config.cmake.in
include/kvdb/: db.h
include/oryx/: key_value_database.hpp
test/: main.cpp  read_write.cpp
tests/: doctest.hpp  main.cpp  read_write.cpp
